# netstrat

./: .gitignore  Cargo.toml  LICENCE  Readme.md  graph_1674987687452.json  graph_1674988132870.json
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/iced/: main.rs
examples/iced/network/: rest.rs
examples/iced/sources/: mod.rs
examples/iced/sources/binance/: client.rs
examples/iced/sources/polygon/: client.rs
src/: main.rs
src/netstrat/: bounds.rs  bus.rs  data.rs  drawer.rs  image_state.rs  line_filter_highlight_layout.rs  loading_state.rs  message.rs  mod.rs  net.rs  pages.rs  state.rs  thread_pool.rs
src/netstrat/bus/: bus.rs  channels.rs  errors.rs  mod.rs
src/netstrat/candles/: loading_state.rs  mod.rs  pages.rs  props.rs  state.rs
src/netstrat/graph/: loading_state.rs  mod.rs  pages.rs  props.rs  state.rs
src/netstrat/net/: data.rs  mod.rs  settings.rs
src/netstrat/syntetic_data/: data.rs  dataset.rs  errors.rs  mod.rs
src/network/: rest.rs
src/sources/: mod.rs
src/sources/binance/: client.rs  errors.rs  interval.rs  mod.rs
src/sources/polygon/: client.rs
src/widgets/: candle_plot.rs  candles.rs  graph.rs  mod.rs  net.rs  net_visualizer.rs  open_drop_file.rs  symbols.rs  theme.rs  time_input.rs  volume.rs  widget.rs
src/widgets/candles/: bounds.rs  candles.rs  canles_drawer.rs  drawer.rs  error.rs  graph.rs  loading_state.rs  mod.rs  pages.rs  props.rs  state.rs  symbols.rs  time_range.rs  time_range_settings.rs
src/widgets/candles_graph/: candles.rs  data.rs  graph.rs  mod.rs  volume.rs
src/widgets/graph/: candles.rs  data.rs  graph.rs  loading_state.rs  mod.rs  props.rs  state.rs  time_input.rs  volume.rs
src/widgets/graph/time_range/: mod.rs  time_range.rs
src/widgets/history/: clicks.rs  history.rs  message.rs  mod.rs  step.rs  step_difference.rs
src/widgets/image_drawer/: mod.rs  state.rs  widget.rs
src/widgets/matrix/: adj_matrix_state.rs  mod.rs  state.rs  widget.rs
src/widgets/net/: button_clicks.rs  cones.rs  cycle.rs  data.rs  drawer.rs  elements.rs  errors.rs  history.rs  image_state.rs  interactions.rs  matrix.rs  mod.rs  net_props.rs  net_visualizer.rs  nodes_input.rs  props.rs  settings.rs
src/widgets/net/graph/: mod.rs  state.rs
src/widgets/net/graph/matrix/: elements.rs  mod.rs  state.rs
src/widgets/net/graph/state/: calculated.rs  state.rs
src/widgets/net/history/: generation_path.rs  history.rs  history_step.rs  mod.rs  path.rs  step.rs
src/widgets/net_drawer/: mod.rs  widget.rs
src/widgets/net_props/: button_clicks.rs  cones.rs  edges_input.rs  interactions.rs  mod.rs  nodes_and_edges.rs  settings.rs  widget.rs
src/widgets/net_props/graph/: cycle.rs  elements.rs  frozen_elements.rs  graph.rs  graph_index.rs  mod.rs  path.rs  simulation_state.rs
src/widgets/simulation_props/: controls.rs  messages.rs  mod.rs  widget.rs
src/widgets/simulator/: mod.rs  widget.rs
src/windows/: candles.rs  debug.rs  graph.rs  mod.rs  net.rs  net_props.rs  note_graph.rs  simulator.rs  symbols_graph.rs  time_range_chooser.rs  window.rs
(+10 files in other folders)
