[package]
edition = "2021"
name = "netstrat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = "0.4.19"
crossbeam = "0.8.1"
eframe = {version = "0.18.0", features = ["persistence"]}
egui = {version = "0.18.1", features = ["serde"]}
egui_extras = {version = "0.18.0", features = ["chrono", "serde"]}
futures = "0.3"
poll-promise = {version = "0.1.0", features = ["tokio"]}
reqwest = {version = "0.11.10"}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.19.2", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
rand = "0.8.5"
quick-error = "2.0.1"
