[package]
edition = "2021"
name = "netstrat"
version = "0.1.0"
repository = "https://github.com/qzarx1/netstrat"

[dependencies]
csv = "1.1"
chrono = "0.4.19"
crossbeam = "0.8.1"
eframe = { version = "0.19.0" }
egui = { version = "0.19.0" }
egui_extras = { version = "0.19.0", features = ["chrono", "svg"] }
futures = "0.3"
poll-promise = { version = "0.1.0", features = ["tokio"] }
reqwest = { version = "0.11.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rand = "0.8.5"
quick-error = "2.0.1"
egui-notify = "0.4.0"
petgraph = "0.6.2"
open = "3.0.2"
urlencoding = "2.1.2"
rfd = "0.10"
lazy_static = "1.4.0"
regex = "1.6.0"
graphviz-rust = "0.3.0"