[package]
edition = "2021"
name = "netstrat"
version = "0.1.0"
authors = ["Dmitrii Samsonov <blitzarx1@gmail.com>"]
license = "MIT"
repository = "https://github.com/qzarx1/netstrat"

[dependencies]
csv = "1.1"
chrono = "0.4.19"
crossbeam = "0.8.1"
eframe = { version = "0.19" }
egui = { version = "0.19" }
egui_extras = { version = "0.19", features = ["chrono", "svg"] }
futures = "0.3"
poll-promise = { version = "0.2", features = ["tokio"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rand = "0.8.5"
quick-error = "2.0.1"
egui-notify = "0.4"
petgraph = { vesion = "0.6.2", features = ["serde-1"] }
open = "4"
urlencoding = "2.1.2"
rfd = "0.11"
lazy_static = "1.4.0"
regex = "1.6.0"
graphviz-rust = "0.6"
ndarray = "0.15"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
