[package]
edition = "2021"
name = "hedgegraph-iced"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
iced = {version = "0.4.2", features = ["image", "tokio"]}
log = "0.4"
plotters = "0.3.1"
plotters-iced = "0.2.0"
reqwest = "0.11"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
